# zenith

./: .gitignore  .grype.yaml  .trivyignore  CODEOWNERS  CONTRIBUTING.md  README.md  index.yaml  skopeo-manifest.yml  tilt-component.yaml  zenith-apiserver-0.1.0-dev.0.client-chart.134.tgz  zenith-apiserver-0.1.0-dev.0.client-chart.135.tgz  zenith-apiserver-0.1.0-dev.0.client-chart.136.tgz  zenith-apiserver-0.1.0-dev.0.client-chart.137.tgz  zenith-apiserver-0.1.0-dev.0.client-chart.138.tgz  zenith-apiserver-0.1.0-dev.0.debug-zenith.171.tgz  zenith-apiserver-0.1.0-dev.0.debug-zenith.173.tgz  zenith-apiserver-0.1.0-dev.0.debug-zenith.174.tgz  zenith-apiserver-0.1.0-dev.0.debug-zenith.175.tgz  zenith-apiserver-0.1.0-dev.0.debug-zenith.177.tgz  zenith-apiserver-0.1.0-dev.0.debug-zenith.178.tgz  zenith-apiserver-0.1.0-dev.0.feature-auth-get-params.171.tgz  zenith-apiserver-0.1.0-dev.0.feature-client-heartbeat.164.tgz  zenith-apiserver-0.1.0-dev.0.feature-client-heartbeat.165.tgz  zenith-apiserver-0.1.0-dev.0.feature-client-verbose.228.tgz  zenith-apiserver-0.1.0-dev.0.feature-client-verbose.229.tgz  zenith-apiserver-0.1.0-dev.0.feature-client-verbose.230.tgz  zenith-apiserver-0.1.0-dev.0.feature-client-verbose.231.tgz  zenith-apiserver-0.1.0-dev.0.feature-consul-server-only.207.tgz  zenith-apiserver-0.1.0-dev.0.feature-consul-server-only.209.tgz  zenith-apiserver-0.1.0-dev.0.feature-helm-services.219.tgz  zenith-apiserver-0.1.0-dev.0.feature-helm-services.220.tgz  zenith-apiserver-0.1.0-dev.0.feature-helm-services.221.tgz  zenith-apiserver-0.1.0-dev.0.feature-helm-services.222.tgz  zenith-apiserver-0.1.0-dev.0.feature-helm-services.223.tgz  zenith-apiserver-0.1.0-dev.0.feature-helm-services.224.tgz  zenith-apiserver-0.1.0-dev.0.feature-helm-services.225.tgz  zenith-apiserver-0.1.0-dev.0.feature-k8s-operator.151.tgz  zenith-apiserver-0.1.0-dev.0.feature-k8s-operator.152.tgz  zenith-apiserver-0.1.0-dev.0.feature-k8s-operator.153.tgz  zenith-apiserver-0.1.0-dev.0.feature-k8s-operator.154.tgz  (+8904 more)
.github/: dependabot.yml
.github/actions/docker-multiarch-build-push-action/: action.yml
.github/actions/helm-publish-action/: Dockerfile  action.yml  publish-charts.py
.github/actions/semver-action/: Dockerfile  action.yml  actions.yml  semver.py
.github/workflows/: build-push-artifacts.yaml  build-push-client.yaml  build-push-proxy.yaml  build-push-server.yaml  build-push-sshd.yaml  helm-lint.yaml  test-pr.yaml  tox.yaml  update-dependencies.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  consul.yaml
chart/templates/proxy/: deployment.yaml  ingress.yaml  service.yaml
chart/templates/registrar/: ingress.yaml  secret.yaml
chart/templates/sshd/: configmap.yaml  deployment.yaml  service.yaml
chart/templates/sync/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  namespace.yaml  role-tls-reader.yaml  role.yaml  rolebinding-manage-services.yaml  rolebinding-tls-reader.yaml  rolebinding.yaml  serviceaccount.yaml
charts/apiserver/: .helmignore  Chart.yaml  README.md  values.yaml
charts/apiserver/templates/: _helpers.tpl  configmap.yaml  pod.yaml
charts/client/: Chart.yaml  values.yaml
charts/client/templates/: _helpers.tpl  (+2 more)
charts/operator/: Chart.yaml  values.yaml
charts/proxy/: Chart.yaml  values.yaml
charts/server/: Chart.yaml  values.yaml
charts/service/: Chart.yaml  values.yaml
ci/: publish-charts.py
client/: .dockerignore  Dockerfile  requirements.txt  setup.cfg  test-requirements.txt
client/zenith/client/: bootstrap.py  cli.py  config.py  init.py  tunnel.py
common/: Dockerfile  requirements.txt  setup.cfg
common/zenith/common/: cli.py  config.py
docs/: architecture.md  client.md  server.md
operator/: .dockerignore  Dockerfile  example-reservation.yaml  example.yaml  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt
operator/zenith/operator/: config.py  main.py  template.py  utils.py
operator/zenith/operator/models/: __init__.py  schema.py
operator/zenith/operator/models/v1alpha1/: __init__.py  client.py  reservation.py
operator/zenith/operator/templates/client/: clusterrolebinding.yaml  deployment.yaml  secret.yaml  serviceaccount.yaml
operator/zenith/operator/templates/crds/: clients.yaml  reservations.yaml
proxy/: Dockerfile
registrar/: Dockerfile  requirements.txt  setup.cfg  test-requirements.txt
registrar/zenith/registrar/: app.py  config.py  models.py
registrar/zenith/registrar/backends/: __init__.py  base.py  consul.py  crd.py
scripts/: build-push-chart.py
server/: Dockerfile
sshd/: Dockerfile  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
sshd/etc/: motd
sshd/etc/ssh/: sshd_config
sshd/etc/zenith/: sshd.yaml
sshd/etc/zenith/sshd/: defaults.yaml
sshd/zenith/sshd/: cli.py  config.py  models.py  tunnel.py
sshd/zenith/sshd/backends/: __init__.py  base.py  consul.py  crd.py
sync/: .dockerignore  .stestr.conf  Dockerfile  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
sync/chart/: Chart.yaml  values.yaml
sync/chart/templates/: _helpers.tpl  endpointslice.yaml  ingress-oidc.yaml  ingress.yaml  ingressroute-oidc.yaml  ingressroute.yaml  secret-tls-ca.yaml  secret-tls.yaml  service.yaml
sync/chart/tests/: snapshot_test.yaml  values_test_overrides.yaml
sync/chart/tests/__snapshot__/: snapshot_test.yaml.snap
sync/zenith/sync/: cli.py  config.py  consul.py  ingress_modifier.py  kubernetes.py  main.py  metrics.py  model.py  util.py
sync/zenith/sync/processor/: __init__.py  base.py  helm.py
sync/zenith/sync/reconcilers/: __init__.py  base.py  helm.py
sync/zenith/sync/store/: __init__.py  base.py  consul.py
sync/zenith/sync/store/crd/: __init__.py  store.py
sync/zenith/sync/store/crd/models/: __init__.py
sync/zenith/sync/store/crd/models/v1alpha1/: __init__.py  endpoints.py  lease.py  service.py
sync/zenith/sync/watchers/: __init__.py  base.py  consul.py
(+75 files in other folders)
