[metadata]
name = zenith-client
version = 0.1.0
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/stackhpc/zenith


[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    click
    configomatic[yaml]
    pydantic
    requests

[options.entry_points]
console_scripts =
    zenith-client = zenith.client.cli:main
