[metadata]
name = zenith-operator
version = 0.1.0
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/stackhpc/zenith


[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    configomatic[yaml]
    cryptography
    easykube
    jinja2
    httpx
    kopf
    pydantic
    pyyaml
