[metadata]
name = zenith-operator
version = 0.1.0
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/azimuth-cloud/zenith
python-requires = >=3.10

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    configomatic[yaml]
    cryptography
    easykube
    httpx
    jinja2
    kube-custom-resource
    kopf
    pydantic
    pyyaml
