[metadata]
name = zenith-registrar
version = 0.1.0
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/stackhpc/zenith


[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    configomatic[yaml]
    cryptography
    fastapi
    httpx
    pydantic

[options.extras_require]
runtime = uvicorn

[options.entry_points]
zenith.registrar.backends =
    consul = zenith.registrar.backends.consul:Backend
    crd    = zenith.registrar.backends.crd:Backend
