[metadata]
name = zenith-sshd
version = 0.1.0
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/stackhpc/zenith


[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    click
    configomatic[yaml]
    cryptography
    easykube
    pydantic
    requests

[options.entry_points]
console_scripts =
    zenith-sshd = zenith.sshd.cli:main
zenith.sshd.backends =
    consul = zenith.sshd.backends.consul:Backend
    crd    = zenith.sshd.backends.crd:Backend
