[metadata]
name = zenith-sync
version = 0.1.0
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/stackhpc/zenith


[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    click
    configomatic
    httpx
    pydantic
    pyyaml
    zenith-common

[options.entry_points]
zenith.cli.subcommands =
    sync = zenith.sync.cli:main
