[metadata]
name = zenith-sync
version = 0.1.0
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/stackhpc/zenith


[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    click
    configomatic[yaml]
    easykube
    httpx
    pydantic
    pyhelm3
    pyyaml

[options.entry_points]
zenith.sync.ingress_modifiers =
    k8s.io/ingress-nginx = zenith.sync.ingress_modifier:NginxIngressModifier

console_scripts =
    zenith-sync = zenith.sync.cli:main
