[metadata]
name = zenith-sync
version = 0.1.0
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/azimuth-cloud/zenith
python-requires = >=3.10

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    aiohttp
    click
    configomatic[yaml]
    easykube
    easysemver
    httpx
    kube-custom-resource
    pydantic
    pyhelm3
    pyyaml

[options.entry_points]
console_scripts =
    zenith-sync = zenith.sync.cli:main
zenith.sync.processors =
    helm = zenith.sync.processor.helm:Processor
zenith.sync.stores =
    consul = zenith.sync.store.consul:Store
    crd    = zenith.sync.store.crd:Store
